--- a/test.ipynb
+++ b/test.ipynb
@@ -19,6 +19,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"world\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
