--- a/test.ipynb
+++ b/test.ipynb
@@ -80,7 +80,7 @@
     "    }\n",
     "}\n",
     "for key, value in student_cgpa.items():\n",
-    "    value['Height'] = 1.75\n",
+    "    value['Height'] = 1.75   #Contoh berat everyone sama 1.75kg\n",
     "\n",
     "\n",
     "print(student_cgpa)\n",
@@ -91,31 +91,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#loop\n",
-    "num=1\n",
-    "while True:\n",
-    "    if num > 10:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'company_name': 'Genesys', 'company_score': 3.6, 'position': 'Software Engineer', 'location': 'Mount Laurel, NJ', 'pay': '$95K', 'Malaysia Pay': 419900, 'Income Class': 'high'}\n"
+      "{'name': 'Mohan Raj', 'age': 20, 'courses': {'Biology': {'grade': 'B', 'credits': 4}, 'Physics': {'grade': 'A-', 'credits': 4}, 'Mathematics': {'grade': 'A', 'credits': 3}}, 'extracurricular_activities': ['Chess Club', 'Basketball'], 'Total Credit': 11}\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "students = [\n",
+    "    {\n",
+    "        \"name\": \"Ahmad Faizal\",\n",
+    "        \"age\": 21,\n",
+    "        \"courses\": {\n",
+    "            \"Mathematics\": {\"grade\": \"A\", \"credits\": 3},\n",
+    "            \"Physics\": {\"grade\": \"B\", \"credits\": 4},\n",
+    "            \"History\": {\"grade\": \"A-\", \"credits\": 2}\n",
+    "        },\n",
+    "        \"extracurricular_activities\": [\"Debate Club\", \"Soccer\"]\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Nur Aisyah\",\n",
+    "        \"age\": 22,\n",
+    "        \"courses\": {\n",
+    "            \"Mathematics\": {\"grade\": \"B+\", \"credits\": 3},\n",
+    "            \"Chemistry\": {\"grade\": \"A\", \"credits\": 4},\n",
+    "            \"Literature\": {\"grade\": \"A-\", \"credits\": 2}\n",
+    "        },\n",
+    "        \"extracurricular_activities\": [\"Drama Club\", \"Volunteering\"]\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Mohan Raj\",\n",
+    "        \"age\": 20,\n",
+    "        \"courses\": {\n",
+    "            \"Biology\": {\"grade\": \"B\", \"credits\": 4},\n",
+    "            \"Physics\": {\"grade\": \"A-\", \"credits\": 4},\n",
+    "            \"Mathematics\": {\"grade\": \"A\", \"credits\": 3}\n",
+    "        },\n",
+    "        \"extracurricular_activities\": [\"Chess Club\", \"Basketball\"]\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# for student in students:\n",
+    "   # print(student['name'])\n",
+    "\n",
+    "#def AddCredit(student=students, name):\n",
+    "for student in students:\n",
+    "    Total_Credit = 0\n",
+    "    for key,value in student[\"courses\"].items():\n",
+    "        Total_Credit += value['credits']\n",
+    "\n",
+    "student['Total Credit'] = Total_Credit\n",
+    "print(student)\n"
+   ]
   },
   {
    "cell_type": "code",
