--- a/Telegram_bot_py.ipynb
+++ b/Telegram_bot_py.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,11 +25,10 @@
      "output_type": "stream",
      "text": [
       "Bot is running....\n",
-      "deswf\n",
-      "ddf\n",
-      "saya suka pas\n",
-      "yeke\n",
-      "anda pasti?\n"
+      "hi\n",
+      "are you there?\n",
+      "umno\n",
+      "pasti?\n"
      ]
     }
    ],
@@ -43,8 +42,8 @@
     "\n",
     "\"\"\"Exercise 2: String Methods Using Bot\n",
     "Objective:\n",
-    "    1. Create a bot that will convert the text to uppercase\n",
-    "    2. Check if the text contains prohibited words\n",
+    "    1. Create a bot that will convert the text to uppercase \n",
+    "    2. Check if the text contains prohibited words    \n",
     "    3. If the text contains prohibited words, delete the message\n",
     "    4. If the text does not contain prohibited words, convert the text to uppercase and reply to the user\n",
     "\n",
